--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Form Game 2.0</title>
+    <title>Login Form Game 2.0</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel ="stylesheet" href="styles/buttons.css">
     <link rel="icon" href="imgs/icon.png">
