--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="styles/index.css">
         <link rel="stylesheet" href="styles/buttons.css">
-        <title>Login FormGame 2.0</title>
+        <title>Menu FormGame 2.0</title>
         <link rel="icon" href="imgs/icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <!--Google Fonts-->
@@ -19,5 +19,7 @@
             <button class="btn-default" onclick="window.location='cadastro.html';">Cadastro</button>
         </div>
     <script src="scripts/buttons.js"></script>
+    <audio id="foobar" src="/res/mii.mp3" preload="auto"> 
+    <script src="scripts/music.js"></script>
     </body>
 </html>
