--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <body class="">
         <button class="btn-default" onclick="toggleDarkMode()">Modo escuro</button>
         <div class="formulario">
+            <h1>Selecione</h1>
             <button class="btn-default" onclick="window.location='login.html';">Login</button><br>
             <button class="btn-default" onclick="window.location='cadastro.html';">Cadastro</button>
         </div>
