--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="btn-default" onclick="window.location='cadastro.html';">Cadastro</button>
         </div>
     <script src="scripts/buttons.js"></script>
-    <audio id="foobar" src="/res/mii.mp3" preload="auto"> 
+    <audio loop id="foobar" src="/res/mii.mp3" preload="none"></audio>
     <script src="scripts/music.js"></script>
     </body>
 </html>
